--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,11 @@
 {
   "require-dev": {
-    "heroku/heroku-buildpack-php": "*"
+    "heroku/heroku-buildpack-php": "*",
+    "phpunit/phpunit": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "Project\\": "src/"
+    }
   }
 }
